2003-03-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/shift.m: Force empty_list_elements_ok to 1.

2003-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* deprecated/struct_contains.m, deprecated/struct_elements.m:
	New files.

2003-02-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/tests/kolmogorov_smirnov_test.m: Use str2func to make
	function handle to pass to feval.
	* statistics/base/qqplot.m: Likewise.
	* statistics/base/ppplot.m: Likewise.
	* signal/spectral_xdf.m: Likewise.
	* signal/spectral_adf.m: Likewise.

2003-02-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/axis.m: Avoid whitespace in literal matrix problem.

2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/logm.m: New file.

2003-02-18  David Bateman <dbateman@free.fr>

 	* mkpkgadd: Scan C++ files as well

2003-02-13  Schloegl Alois <alois.schloegl@tugraz.at>

	* strings/findstr.m: Return empty set for zero-length target.

2003-02-11  Paul Kienzle <pkienzle@users.sf.net>

	* set/union.m: Preserve the orientation of inputs.

2003-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Eliminate leading spaces.

2003-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Do a better job with 0, Inf, and NaN, 

2003-01-11  Paul Kienzle <pkienzle@users.sf.net>

	* Makefile.in (gethelp$(BUILD_EXEEXT)): Pass $(BUILD_CXXFLAGS) and
	$(BUILD_LDFLAGS) to compiler.

2003-01-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/num2str.m: Don't specify field width for scalars.

2003-01-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (DISTFILES): Don't forget mkpkgadd.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* gethelp.cc: Define __USE_STD_IOSTREAM if using Compaq C++.

	* miscellaneous/tempname.m: New file.

	* miscellaneous/tempdir.m: New file.

	* miscellaneous/fullfile.m: New file.

2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/fileparts.m: New file.

	* io/beep.m: New file.
