@@ -1,3 +1,7 @@
+2003-03-24  Mats Jansson  <mats.e.jansson@home.se>
+
+	* syscalls.cc (Fkill): Fixed docstring typo.
+
 2003-03-18  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* ov-cell.h (octave_cell::is_matrix_type): New function.
